syntax = "proto3";
option go_package = "./companyService";

package proto;

service AuthGRPCService {
  rpc SingUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns(SignInResponse);
  rpc Refresh(RefreshRequest) returns(RefreshResponse);
  rpc Logout(LogoutRequest) returns(LogoutResponse);
}

message SignUpRequest{
  string username = 1;
  string email = 2 ;
  string password = 3;
}

message SignUpResponse{}

message SignInRequest{
  string username = 1;
  string password = 2;
}

message TokenParam {
  string UserAgent = 1;
  string Fingerprint = 2;
  string IP = 3;
}

message SignInResponse{
  string accessToken = 1 ;
  string refreshToken = 2 ;
}

message RefreshRequest{
  string refreshToken = 1 ;
}

message RefreshResponse{
  string accessToken = 1 ;
  string refreshToken = 2 ;
}

message LogoutRequest{
  string refreshToken = 1 ;
}

message LogoutResponse{}